Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <link rel="stylesheet" href="/css/main.css">
     <meta name="description" content="Mountain Bean Café and Roaster of Colorado.  Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
   </head>
-  <body>
+  <body class="home-bg">
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
     <a href="index.html">Back to Home</a>
     <nav class="navbar">
     <nav class="navbar">
   <a href="/index.html="logo-link">
-  <img src="/assets/Mountain Bean Logo.png" alt=”A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated oval. Radiating lines extend from the top and bottom of the oval, resembling sunbursts. On each side of the oval, there are minimalist mountain illustrations. The business name curves around the oval in uppercase letters. The background is a deep green color.">
-</a>8
+  <img src="/assets/Mountain Bean Logo.png" alt=”A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elo[...]</a>8
   <ul>
     <li><a href="/index.html">Home</a></li>
     <li><a href="about.html">About Us</a></li>
@@ -30,8 +29,7 @@
     <!--      START: UNIQUE PAGE CONTENT                       -->
     <!-- ====================================================== -->
     <h1>Fresh Air, Fresh Roasts — Experience Mountain Bean’s Scenic Brews</h1>
-    <p> We <b> love </b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your own home! <a href="/subscription.html" class="btn-primary">SUBSCRIBE</a> </p>
-<h2> In the Area? </h2>
+    <p> We <b> love </b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your own home! <[...]<h2> In the Area? </h2>
 <p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and hours on our <a href="/contact.html" class="btn-primary">Contact Page</a> </p>
     <!-- ====================================================== -->
     <!--      END: UNIQUE PAGE CONTENT                         -->
