--- a/pages/index.html
+++ b/pages/index.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href=”https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
-     <meta charset="UTF-8">
-    <title>Maintain Bean Café Home</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" href="/css/main.css">
-    <meta name="description" content="Mountain Bean Café and Roaster of Colorado.  Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Mountain Bean Café Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="/css/main.css">
+    <meta name="description" content="Mountain Bean Café and Roaster of Colorado. Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
   </head>
   <body class="home-bg">
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
     <a href="index.html">Back to Home</a>
     <nav class="navbar">
-    <nav class="navbar">
-  <a href="/index.html="logo-link">
-  <img src="/assets/Mountain Bean Logo.png" alt=”A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elo[...]</a>8
-  <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="subscription.html">Pricing</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-   <li><a href="contact.html">Hours and Location</a></li>
-  </ul>
-</nav>
+      <a href="/index.html" class="logo-link">
+        <img src="/assets/Mountain Bean Logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
+      </a>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="subscription.html">Pricing</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Hours and Location</a></li>
+      </ul>
+    </nav>
     <hr>
 
     <!-- ====================================================== -->
     <!--      START: UNIQUE PAGE CONTENT                       -->
     <!-- ====================================================== -->
     <h1>Fresh Air, Fresh Roasts — Experience Mountain Bean’s Scenic Brews</h1>
-    <p> We <b> love </b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your own home! <[...]<h2> In the Area? </h2>
-<p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and hours on our <a href="/contact.html" class="btn-primary">Contact Page</a> </p>
-    <!-- ====================================================== -->
-    <!--      END: UNIQUE PAGE CONTENT                         -->
-    <!-- ====================================================== -->
-    <hr>
-    <!-- The footer provides consistency and a professional closing on every page. -->
-    <p>(c) 2025 Mountain Bean Café and Rosters. All Rights Reserved.</p>
-  </body>
-</html>
+    <p>We <b>love</b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your
+
