--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <title>Mountain Bean Café Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="/css/main.css">
-    <meta name="description" content="Mountain Bean Café and Roaster of Colorado. Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
+    <meta name="description" content="Mountain Bean Café and Roaster of Steamboat Colorado. Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
   </head>
   <body class="home-bg">
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
@@ -31,5 +31,13 @@
     <h1>Fresh Air, Fresh Roasts — Experience Mountain Bean’s Scenic Brews</h1>
     <p> We <b> love </b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your own home! <a href="/subscription.html" class="btn-primary">SUBSCRIBE</a> </p>
 <h2> In the Area? </h2>
-<p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and  our hours <a href="contact.html" class="btn-primary">HERE> </p>
+<p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and  our hours <a href="contact.html" class="btn-primary">HERE</a> </p>
+<!-- ====================================================== -->
+    <!--      END: UNIQUE PAGE CONTENT                         -->
+    <!-- ====================================================== -->
+    <hr>
+    <!-- The footer provides consistency and a professional closing on every page. -->
+    <p>(c) 2025 Mountain Bean Café and Rosters. All Rights Reserved.</p>
+  </body>
+</html>
 
