--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Mountain Bean Café Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <meta name="description" content="Mountain Bean Café and Roaster of Steamboat Colorado. Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
   </head>
   <body class="home-bg">
