--- a/template.html
+++ b/template.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8">
     <title>Maintain Bean Café Home</title>
      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="../css/main.css">
     <meta name="description" content="Mountain Bean Café and Roaster of Colorado.  Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
   </head>
   <body>
@@ -14,7 +14,7 @@
     <nav class="navbar">
     <nav class="navbar">
   <a href="/index.html="logo-link">
-  <img src="/assets/Mountain Bean Logo.png" alt=”A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated oval. Radiating lines extend from the top and bottom of the oval, resembling sunbursts. On each side of the oval, there are minimalist mountain illustrations. The business name curves around the oval in uppercase letters. The background is a deep green color.">
+  <img src="/assets/Mountain Bean Logo.png" alt=” A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated oval. Radiating lines extend from the top and bottom of the oval, resembling sunbursts. On each side of the oval, there are minimalist mountain illustrations. The business name curves around the oval in uppercase letters. The background is a deep green color.">
 </a>
   <ul>
     <li><a href="/index.html">Home</a></li>
