--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
     <a href="index.html">Back to Home</a>
     <nav class="navbar">
       <a href="/index.html" class="logo-link">
-        <img src="/assets/Mountain Bean Logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
+        <img src="/assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
       </a>
       <ul>
         <li><a href="/index.html">Home</a></li>
