--- a/template.html
+++ b/template.html
@@ -11,10 +11,9 @@
   <body>
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
     <a href="index.html">Back to Home</a>
-    <nav class="navbar">
-    <nav class="navbar">
-  <a href="/index.html="logo-link">
-  <img src="/assets/Mountain Bean Logo.png" alt=” A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated oval. Radiating lines extend from the top and bottom of the oval, resembling sunbursts. On each side of the oval, there are minimalist mountain illustrations. The business name curves around the oval in uppercase letters. The background is a deep green color.">
+ <nav class="navbar">
+  <a href="/index.html" class="logo-link">
+ <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
 </a>
   <ul>
     <li><a href="/index.html">Home</a></li>
