--- a/pages/index.html
+++ b/pages/index.html
@@ -10,12 +10,19 @@
   </head>
   <body class="home-bg">
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
-    <a href="index.html">Back to Home</a>
+    <a href="pages/index.html">Back to Home</a>
     <nav class="navbar">
   <a href="/index.html" class="logo-link">
  <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
   </a>
-</nav>
+      <ul>
+        <li><a href="pages/index.html">Home</a></li>
+        <li><a href="pages/about.html">About Us</a></li>
+        <li><a href=”pages/subscription.html">Pricing</a></li>
+        <li><a href="pages/gallery.html">Gallery</a></li>
+        <li><a href=”pages/contact.html">Hours and Location</a></li>
+      </ul>
+    </nav>
     <hr>
 
     <!-- ====================================================== -->
