--- a/template.html
+++ b/template.html
@@ -14,14 +14,15 @@
  <nav class="navbar">
   <a href="/index.html" class="logo-link">
  <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
-</a>
-  <ul>
-    <li><a href="/index.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="subscription.html">Pricing</a></li>
-    <li><a href="gallery.html">Gallery</a></li>
-   <li><a href="contact.html">Hours and Location</a></li>
-  </ul>
+      </a>
+      <ul>
+        <li><a href="pages/index.html">Home</a></li>
+        <li><a href="pages/about.html">About Us</a></li>
+        <li><a href=”pages/subscription.html">Pricing</a></li>
+        <li><a href="pages/gallery.html">Gallery</a></li>
+        <li><a href=”pages/contact.html">Hours and Location</a></li>
+      </ul>
+
 </nav>
     <hr>
 
