--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
   </a>
      <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
       <ul>
-        <li><a href="pages/index.html">Home</a></li>
+        <li><a href="MountainBeanCoffeeCo/pages/index.html">Home</a></li>
         <li><a href="pages/about.html">About Us</a></li>
         <li><a href=”pages/subscription.html">Pricing</a></li>
         <li><a href="pages/gallery.html">Gallery</a></li>
