--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
   </a>
      <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="pages/index.html">Home</a></li>
         <li><a href="pages/about.html">About Us</a></li>
         <li><a href=”pages/subscription.html">Pricing</a></li>
         <li><a href="pages/gallery.html">Gallery</a></li>
@@ -37,7 +37,7 @@
     <h1>Fresh Air, Fresh Roasts — Experience Mountain Bean’s Scenic Brews</h1>
     <p> We <b> love </b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your own home! <a href="/subscription.html" class="btn-primary">SUBSCRIBE</a> </p>
 <h2> In the Area? </h2>
-<p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and  our hours <a href="contact.html" class="btn-primary">HERE</a> </p>
+<p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and our hours <a href="contact.html" class="btn-primary">HERE</a> </p>
 <!-- ====================================================== -->
     <!--      END: UNIQUE PAGE CONTENT                         -->
     <!-- ====================================================== -->
