--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,8 @@
   };
 </script>
   <body class="home-bg">
+  ...
+</body>
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
     <a href="pages/index.html">Back to Home</a>
     <nav class="navbar">
