--- a/pages/index.html
+++ b/pages/index.html
@@ -36,10 +36,12 @@
     <!-- ====================================================== -->
     <!--      START: UNIQUE PAGE CONTENT                       -->
     <!-- ====================================================== -->
-    <h1>Fresh Air, Fresh Roasts — Experience Mountain Bean’s Scenic Brews</h1>
+<div class="overlay-content">...
+  <h1>Fresh Air, Fresh Roasts — Experience Mountain Bean’s Scenic Brews</h1>
     <p> We <b> love </b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your own home! <a href="/subscription.html" class="btn-primary">SUBSCRIBE</a> </p>
 <h2> In the Area? </h2>
 <p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and our hours <a href="contact.html" class="btn-primary">HERE</a> </p>
+</div>
 <!-- ====================================================== -->
     <!--      END: UNIQUE PAGE CONTENT                         -->
     <!-- ====================================================== -->
