Update index.html with new content

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,24 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mountain Bean Coffee Co</title>
-    <style>
-        h1, h2, p {
-            background-color: rgba(139, 69, 19, 0.5); /* Semi-transparent brown */
-            padding: 10px; /* Optional: Add some padding for better readability */
-            border-radius: 5px; /* Optional: Add rounded corners */
-        }
-    </style>
 </head>
 <body>
     <h1>Welcome to Mountain Bean Coffee Co</h1>
-    <h2>Our Story</h2>
-    <p>We are passionate about coffee and dedicated to sourcing the finest beans.</p>
-    <h2>Our Products</h2>
-    <p>Explore our wide range of coffee blends and accessories.</p>
-    <h2>Contact Us</h2>
-    <p>Get in touch with us for any inquiries.</p>
+    <p>Your one-stop destination for the finest coffee beans.</p>
 </body>
 </html>
