--- a/pages/index.html
+++ b/pages/index.html
@@ -1,9 +1,52 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <title>Mountain Bean Coffee Co</title>
-</head>
-<body>
-    <h1>Welcome to Mountain Bean Coffee Co</h1>
-    <p>Your one-stop destination for the finest coffee beans.</p>
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Mountain Bean Café Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="../css/main.css">
+    <meta name="description" content="Mountain Bean Café and Roaster of Steamboat Colorado. Unique Coffee blends that are meant to be enjoyed surrounded by Mother Nature.">
+  </head>
+  <script>
+  document.querySelector('.nav-toggle').onclick = function() {
+    document.querySelector('.nav-links').classList.toggle('active');
+  };
+</script>
+  <body class="home-bg">
+  ...
 </body>
+    <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
+    <a href="pages/index.html">Back to Home</a>
+    <nav class="navbar">
+  <a href="/index.html" class="logo-link">
+ <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
+  </a>
+     <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
+      <ul>
+        <li><a href="pages/index.html">Home</a></li>
+        <li><a href="pages/about.html">About Us</a></li>
+        <li><a href=”pages/subscription.html">Pricing</a></li>
+        <li><a href="pages/gallery.html">Gallery</a></li>
+        <li><a href=”pages/contact.html">Hours and Location</a></li>
+      </ul>
+    </nav>
+    <hr>
+
+    <!-- ====================================================== -->
+    <!--      START: UNIQUE PAGE CONTENT                       -->
+    <!-- ====================================================== -->
+<div class="overlay-content">...
+  <h1>Fresh Air, Fresh Roasts — Experience Mountain Bean’s Scenic Brews</h1>
+    <p> We <b> love </b> coffee as much as mountain views, but sometimes you can’t take a trip which is why we offer seasonal blends so you can taste the seasons from the comfort of your own home! <a href="/subscription.html" class="btn-primary">SUBSCRIBE</a> </p>
+<h2> In the Area? </h2>
+<p> If you are hiking, biking, four wheeling, or just passing through Steamboat CO, please stop in. Check the map and our hours <a href="contact.html" class="btn-primary">HERE</a> </p>
+</div>
+<!-- ====================================================== -->
+    <!--      END: UNIQUE PAGE CONTENT                         -->
+    <!-- ====================================================== -->
+    <hr>
+    <!-- The footer provides consistency and a professional closing on every page. -->
+    <p>(c) 2025 Mountain Bean Café and Rosters. All Rights Reserved.</p>
+  </body>
 </html>
