--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,60 +1,84 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href=”https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
-     <meta charset="UTF-8">
-    <title>Maintain Bean Café Hours and Location</title>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-<link rel="stylesheet" href="../css/main.css">
-    <meta name="description" content="Come Visit Mountain Bean Café and Roaster in Stwamboat Colorado.">
+    <meta charset="UTF-8">
+    <title>Mountain Bean Café Hours and Location</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="description" content="Come Visit Mountain Bean Café and Roaster in Steamboat, Colorado.">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/main.css">
+    <style>
+      /* Responsive Google Map */
+      .map-container {
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 */
+        height: 0;
+        overflow: hidden;
+        margin-bottom: 1em;
+      }
+      .map-container iframe {
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        border: 0;
+      }
+    </style>
   </head>
-  <script>
-  document.querySelector('.nav-toggle').onclick = function() {
-    document.querySelector('.nav-links').classList.toggle('active');
-  };
-</script>
   <body>
-    <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
-    <a href="index.html">Back to Home</a>
- <nav class="navbar">
-  <a href="/index.html" class="logo-link">
- <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
+    <nav class="navbar">
+      <a href="/index.html" class="logo-link">
+        <img src="../assets/logo.png" alt="Mountain Bean Cafe Logo">
       </a>
-   <nav class="navbar">
-  <a href="/index.html" class="logo-link">
-    <img src="../assets/logo.png" alt="Mountain Bean Cafe Logo">
-  </a>
-  <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
-  <ul class="nav-links">
-    <li><a href="pages/index.html">Home</a></li>
-    <li><a href="pages/about.html">About Us</a></li>
-    <li><a href="pages/subscription.html">Pricing</a></li>
-    <li><a href="pages/gallery.html">Gallery</a></li>
-    <li><a href="pages/contact.html">Hours and Location</a></li>
-  </ul>
-</nav>
-      <ul>
-        <li><a href="pages/index.html">Home</a></li>
-        <li><a href="pages/about.html">About Us</a></li>
-        <li><a href=”pages/subscription.html">Pricing</a></li>
-        <li><a href="pages/gallery.html">Gallery</a></li>
-        <li><a href=”pages/contact.html">Hours and Location</a></li>
+      <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="subscription.html">Pricing</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Hours and Location</a></li>
       </ul>
-
-</nav>
+    </nav>
     <hr>
-
-    <!-- ====================================================== -->
-    <!--      START: UNIQUE PAGE CONTENT                       -->
-    <!-- ====================================================== -->
-    <h1></h1>
-    <p>
-    </p>
-    <!-- ====================================================== -->
-    <!--      END: UNIQUE PAGE CONTENT                         -->
-    <!-- ====================================================== -->
+    <main>
+      <h1>Contact Mountain Bean Café</h1>
+      <section>
+        <h2>Visit Us</h2>
+        <address>
+          123 Coffee Lane<br>
+          Steamboat Springs, CO 80487<br>
+          United States<br>
+          Phone: (555) 123-4567
+        </address>
+        <h3>Hours</h3>
+        <ul>
+          <li>Monday - Friday: 7:00 AM – 5:00 PM</li>
+          <li>Saturday: 8:00 AM – 4:00 PM</li>
+          <li>Sunday: 8:00 AM –  4:00 PM</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Find Us on the Map</h3>
+        <div class="map-container">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3089.361247609529!2d-106.831715!3d40.484976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87408c1c1c1c1c1c%3A0x123456789abcdef!2sSteamboat%20Springs%2C%20CO!5e0!3m2!1sen!2sus!4v1691797812345!5m2!1sen!2sus" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </section>
+      <section>
+        <a href="mailto:info@mountainbean.com" class="btn-primary">Contact Us</a>
+      </section>
+    </main>
     <hr>
-    <!-- The footer provides consistency and a professional closing on every page. -->
-    <p>(c) 2025 Mountain Bean Café and Rosters. All Rights Reserved.</p>
+    <footer>
+      <p>&copy; 2025 Mountain Bean Café and Roasters. All Rights Reserved.</p>
+    </footer>
+    <script>
+      document.querySelector('.nav-toggle').onclick = function() {
+        document.querySelector('.nav-links').classList.toggle('active');
+      };
+    </script>
   </body>
 </html>
