--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
         <li><a href="pages/about.html">About Us</a></li>
         <li><a href=”pages/subscription.html">Pricing</a></li>
         <li><a href="pages/gallery.html">Gallery</a></li>
-        <li><a href=”pages/contact.html">Hours and Location</a></li>
+     <li><a href="pages/contact.html">Hours and Location</a></li>
       </ul>
     </nav>
     <hr>
