--- a/template.html
+++ b/template.html
@@ -17,20 +17,16 @@
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
     <a href="index.html">Back to Home</a>
  <nav class="navbar">
-  <a href="/index.html" class="logo-link">
- <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
-      </a>
-   <nav class="navbar">
-  <a href="/index.html" class="logo-link">
-    <img src="../assets/logo.png" alt="Mountain Bean Cafe Logo">
+  <a href="/MountainBeanCoffeeCo/index.html" class="logo-link">
+    <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters...">
   </a>
   <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
-  <ul class="nav-links">
-    <li><a href="pages/index.html">Home</a></li>
-    <li><a href="pages/about.html">About Us</a></li>
-    <li><a href="pages/subscription.html">Pricing</a></li>
-    <li><a href="pages/gallery.html">Gallery</a></li>
-    <li><a href="pages/contact.html">Hours and Location</a></li>
+  <ul>
+    <li><a href="/MountainBeanCoffeeCo/index.html">Home</a></li>
+    <li><a href="/MountainBeanCoffeeCo/pages/about.html">About Us</a></li>
+    <li><a href="/MountainBeanCoffeeCo/pages/subscription.html">Pricing</a></li>
+    <li><a href="/MountainBeanCoffeeCo/pages/gallery.html">Gallery</a></li>
+    <li><a href="/MountainBeanCoffeeCo/pages/contact.html">Hours and Location</a></li>
   </ul>
 </nav>
       <ul>
