--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,19 +26,18 @@
   </head>
   <body>
     <nav class="navbar">
-      <nav class="navbar">
-  <a href="/MountainBeanCoffeeCo/index.html" class="logo-link">
-    <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters...">
-  </a>
-  <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
-  <ul>
-    <li><a href="/MountainBeanCoffeeCo/index.html">Home</a></li>
-    <li><a href="/MountainBeanCoffeeCo/pages/about.html">About Us</a></li>
-    <li><a href="/MountainBeanCoffeeCo/pages/subscription.html">Pricing</a></li>
-    <li><a href="/MountainBeanCoffeeCo/pages/gallery.html">Gallery</a></li>
-    <li><a href="/MountainBeanCoffeeCo/pages/contact.html">Hours and Location</a></li>
-  </ul>
-</nav>
+      <a href="/index.html" class="logo-link">
+        <img src="../assets/logo.png" alt="Mountain Bean Cafe Logo">
+      </a>
+      <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="subscription.html">Pricing</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="contact.html">Hours and Location</a></li>
+      </ul>
+    </nav>
     <hr>
     <main>
       <h1>Contact Mountain Bean Café</h1>
