--- a/pages/about.html
+++ b/pages/about.html
@@ -22,11 +22,11 @@
   </a>
   <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
   <<ul>
-        <li><a href="pages/index.html">Home</a></li>
-        <li><a href="pages/about.html">About Us</a></li>
-        <li><a href=”pages/subscription.html">Pricing</a></li>
-        <li><a href="pages/gallery.html">Gallery</a></li>
-        <li><a href=”pages/contact.html">Hours and Location</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/index.html">Home</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/about.html">About Us</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/subscription.html">Pricing</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/gallery.html">Gallery</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/contact.html">Hours and Location</a></li>
       </ul>
 
 </nav>
