--- a/pages/about.html
+++ b/pages/about.html
@@ -39,6 +39,8 @@
     <p> When we first started hanging out in the mountains, we realized something was missing—a spot to kick back after a hike or catch up with friends that actually felt like it belonged here. Most places to grab coffee seemed pretty generic, with no connection to the wild, beautiful landscape around us. We craved a cozy space where muddy boots, dogs, and mountain stories were always welcome, and the coffee was as fresh as the mountain air. The problem was simple: there just wasn’t a café that truly captured the laid-back, adventurous mountain vibe we loved. </p> 
     <p>
 So, we set out to build one. Our promise is to bring you a place where the spirit of the mountains is in everything, from the locally roasted beans to the woodsy décor and the panoramic views. Whether you’re coming in from the trail or just want to soak up the scenery, our café is designed to be your go-to hangout—a chill spot to enjoy great coffee, good company, and the best of mountain life. We roast our beans with care (and a little bit of mountain magic), and we’re all about creating a community that’s as welcoming and wild as the peaks that surround us. </p>
+    <h2€>Our Staff</h2>
+    
     <!-- ====================================================== -->
     <!--      END: UNIQUE PAGE CONTENT                         -->
     <!-- ====================================================== -->
