--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,16 +26,16 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="/index.html" class="logo-link">
-        <img src="../assets/logo.png" alt="Mountain Bean Cafe Logo">
+      <a href="/MountainBeanCoffeeCo/pages/index.html" class="logo-link">
+        <img src="../assets/logo.png" alt="A stylized logo for Mountain Bean Cafe and Roasters featuring a yellow outline of a steaming coffee cup on a saucer, centered within a vertically elongated mountain silhouette.">
       </a>
       <button class="nav-toggle" aria-label="Open navigation">&#9776;</button>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="subscription.html">Pricing</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Hours and Location</a></li>
+        <li><a href="/MountainBeanCoffeeCo/pages/index.html">Home</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/about.html">About Us</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/subscription.html">Pricing</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/gallery.html">Gallery</a></li>
+  <li><a href="/MountainBeanCoffeeCo/pages/contact.html">Hours and Location</a></li>
       </ul>
     </nav>
     <hr>
