--- a/pages/subscription.html
+++ b/pages/subscription.html
@@ -34,9 +34,42 @@
     <!-- ====================================================== -->
     <!--      START: UNIQUE PAGE CONTENT                       -->
     <!-- ====================================================== -->
-    <h1></h1>
-    <p>
-    </p>
+    <h1>Plans</h1>
+    <section class="subscription-section">
+  <h2>Choose Your Coffee Adventure</h2>
+  <p>Discover the perfect coffee experience delivered to your door. Choose your subscription and enjoy fresh, nature-inspired blends, exclusive perks, and the rich taste of Mountain Bean Café—all at your fingertips!</p>
+  <table class="pricing-table">
+    <thead>
+      <tr>
+        <th>Plan</th>
+        <th>Price / Month</th>
+        <th>Features</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Basic</td>
+        <td>$14</td>
+        <td>1 one bag of one of our rotating seasonal blends, free shipping</td>
+      </tr>
+      <tr>
+        <td>Explorer</td>
+        <td>$22</td>
+        <td>2 Two different seasonal blends per month, member discounts</td>
+      </tr>
+      <tr>
+        <td>Connoisseur</td>
+        <td>$32</td>
+        <td>4 Three different seasonal blends per month, surprise gifts</td>
+      </tr>
+      <tr>
+        <td colspan="3" style="text-align:center;">
+          <button class="subscribe-btn" onclick="alert('Subscribe functionality coming soon!')">Subscribe now</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</section>
     <!-- ====================================================== -->
     <!--      END: UNIQUE PAGE CONTENT                         -->
     <!-- ====================================================== -->
