--- a/pages/subscription.html
+++ b/pages/subscription.html
@@ -64,7 +64,7 @@
       </tr>
       <tr>
         <td colspan="3" style="text-align:center;">
-          <button class="subscribe-btn" onclick="alert('Subscribe functionality coming soon!')">Subscribe now</button>
+          <button class="btn-primary" onclick="alert('Subscribe functionality coming soon!')">Subscribe now</button>
         </td>
       </tr>
     </tbody>
