--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,8 @@
     <p>
 So, we set out to build one. Our promise is to bring you a place where the spirit of the mountains is in everything, from the locally roasted beans to the woodsy décor and the panoramic views. Whether you’re coming in from the trail or just want to soak up the scenery, our café is designed to be your go-to hangout—a chill spot to enjoy great coffee, good company, and the best of mountain life. We roast our beans with care (and a little bit of mountain magic), and we’re all about creating a community that’s as welcoming and wild as the peaks that surround us. </p>
     <h2€>Our Staff</h2>
-    
+    <img src="../assets/Dio.jpg" alt="A picture of our brown and black Airedale terrier siting in a chair with a plate and coffee  cup on the table in front of him." width="300" height="300" class="profile-pic">
+    <p> Meet Dio! Dio is a valuable member of the Mountain Bean team as our door greater and energetic emotional support dog. When he’s not working he’s usually hiking, swimming, or Laying under a tree taking a nap. </p>
     <!-- ====================================================== -->
     <!--      END: UNIQUE PAGE CONTENT                         -->
     <!-- ====================================================== -->
